syntax = "proto3";

option go_package = "./server;server";

package server;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloResp) {}
  rpc ServerSideHello (ServerSideRequest) returns (stream ServerSideResp) {}
  rpc ClientSideHello (stream ClientSideRequest) returns (ClientSideResp) {}
  rpc BidirectionalHello (stream BidirectionalRequest) returns (stream BidirectionalResp) {}


}
message HelloRequest {
  string name = 1;

}
message HelloResp {
  string message = 1;
}

message ServerSideRequest {
  string name = 1;
}
message ServerSideResp {
  string message = 1;
}

message ClientSideRequest {
  string name = 1;
}
message ClientSideResp {
  string message = 1;
}

message BidirectionalRequest {
  string name = 1;
}
message BidirectionalResp {
  string message = 1;
}